--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  background-color: rgb(42, 41, 78);
+  background-color: rgb(20, 20, 41);
   margin: 0;
   padding: 0;
 
@@ -8,15 +8,12 @@
 
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  overflow-y: scroll;
 
 }
 
 main {
   display: flex;
   margin: 30px 20px 10px 20px;
-  position: relative;
-
 }
 .skip-nav:not(:focus):not(:active) {
   position: absolute;
@@ -31,48 +28,50 @@ main {
 
 .side-1 {
   flex: 1;
-  color: transparent;
-  margin: 20px 20px 10px 20px;
-  justify-content: center;
+  margin: 0px 20px 10px 20px;
   padding: 0 0 0 10px;
+  position: fixed;
+  right: 60%;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  /* overflow-y: scroll; */
 
 }
 
-.top_wrapper {
-  margin-bottom: 50px;
-}
-
-nav {
-  margin-top: 30px;
-  margin-bottom: 90px;
-}
-
-nav ul {
+nav ul  {
   list-style: none;
   text-transform: uppercase;
 
 }
 
 nav li {
-  margin: 25px 0 0 0;
-  font-size: 1.5rem;
+  margin: 15px 0 20px 0;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  /* margin-bottom: 7px; */
 }
 
 nav a {
   background: linear-gradient(to right, #ebe71096, green);
   -webkit-background-clip: text;
   color: transparent;
-  padding: 15px 0 15px 10px;
-  margin: 5px 0;
-  width: ;
-
+}
+nav a:hover{
+ 
+  animation: glow 10s ease-in-out infinite alternate;
+}
+@keyframes glow {
+  from{
+    box-shadow: 0 0 10px rgba(0, 255, 255, 5);
+  }
 }
 
 h1 {
   font-size: 3rem;
   line-height: 55px;
-  margin: 15px 0 15px 0;
-  background: linear-gradient(to right, #9ecf1596, green);
+  margin: 15px 0 20px 0;
+  background: linear-gradient(to left, #f6fa0af5, green);
   -webkit-background-clip: text;
   color: transparent;
 
@@ -83,20 +82,28 @@ header h3 {
   margin-bottom: 20px;
 }
 
+h3 {
+  background: linear-gradient(to left, #f6fa0af5, green);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 1.3rem;
+
+}
+
 header p,
 span {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .animation {
   animation-name: slidein;
-  animation-duration: 6s;
-  animation-iteration-count: initial;
+  animation-duration: 7s;
+  animation-iteration-count:initial;
 }
 
 @keyframes slidein {
   from {
-    margin-left: 10%;
+    margin-left: 40%;
     width: 100%;
   }
 
@@ -107,28 +114,15 @@ span {
 
 }
 
-.skip-nav:not(:focus):not(:active) {
-  position: absolute;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  width: 1px;
-  margin: 2px;
-  padding: 0;
-  border: 0;
-}
-
 .social_media_svgs {
   display: flex;
   gap: 50px;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   margin-top: 20px;
   margin-left: 30px;
   color: #fff;
-
-
 }
 
 .social_media_svgs path {
@@ -136,55 +130,53 @@ span {
   align-items: center;
 }
 
-strong {
-  /* |This particular style targets my altschool student id */
-  color: yellow;
-  font-size: 1.2rem;
-}
 
 figure {
   margin-top: 30px;
-  margin-right: 150px;
-  /* display:flex */
-  position: relative;
-}
+  margin-bottom: 40px;
+  justify-content: center;
+ display: flex;
+} 
 
 figure img {
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
   object-fit: cover;
-  border-radius: 50%;
-  margin-right: 0px;
-  flex-shrink: 0;
+  border-radius: 30px 10px  30px 10px;
+
 }
 
 figcaption {
   position: relative;
-  top: -70px;
-  left: 200px;
+  top: 100px;
+  left: 10px;
   font-size: 1.5rem;
-  color: green;
-  background: none;
-
+  background: linear-gradient(to left, #f6fa0af5, green);
+  -webkit-background-clip: text;
+  color: transparent
+}
+span.copyright {
+  color: #559259;
+  font-size: 0.90rem;
+ letter-spacing: 1.2px;
+  margin-left: 90px;
 }
 
 .about_page {
   margin-top: 20px;
-  flex: 2;
-  width: 70%;
   padding-left: 20px;
-  right: 50;
-  margin-left: -2px;
-  margin-right: 60px;
   border-left: 1px solid greenyellow;
+  position: relative;
+  left: 40%;
+  width: 60%;
+  top: 0;
+  text-align:justify;
+
 }
-
-h3 {
-  background: linear-gradient(to right, #9ecf1596, green);
-  -webkit-background-clip: text;
-  color: transparent;
+strong {
+  /* |This particular style targets my altschool student id */
+  color: yellow;
   font-size: 1.2rem;
-
 }
 
 .why_i_joined p {
@@ -227,194 +219,22 @@ footer a {
   margin: 30px 5px 30px 0
 }
 
-span.copyright {
-  color: #559259;
-  font-size: 0.90rem;
-}
 @media (max-width:700px){
-  main.main{
+  main{
     display: flex;
     flex-direction: column;
-  }
-}
-/* 
-body.form-body{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-    overflow-y: hidden;
-}
-
-
-nav.form-nav{
-    float: right;
-   text-transform: uppercase;
-   font-size: 0.90rem;
-    
-}
-.form-nav ul{
-    display: inline-flex;
-    list-style: none;
-}
-.form-nav ul li{
-    padding: 3px;
+    width: fit-content;
+    margin-left:30px ;
     margin-right: 30px;
-}
-
-.form-nav a {
-    text-decoration: none;
-}
-.main_section{
-  display: flex;
-  width: 100%;
-  height: 100vh;
-}
-form{
-display: grid;
-width: 400px;
-
-}
-.section_1{
-background: #fff6ee;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-width: 50%;
-height: 100vh;
-position: relative;
-margin-top: -60px;
-}
-.logo{
-padding: 25px 0 0 25px;
-tab-size: 2px   ;
-}
-.learn_highly{
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 3rem;
-line-height: 72px;
-text-align: center;
-margin-bottom: 25px;
-}
-.earn_diploma{
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-size: 1.3rem;
-line-height: 32px;
-text-align: center;
-margin-top: 0;
-}
-.form-footer{
-margin-bottom: 5rem;
-display: flex;
-align-items: center;
-flex-direction: column;
-}
-.social_media_svgs{
-display: flex;
-gap: 15px;
-align-items: center;
-margin-bottom: 10px;
-color: red;
-}
-.copyright{
-font-size: .800rem;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-line-height: 30px;
-letter-spacing: -.01rem;
-color: #aaa;
-}
-.main-user-info{
-  display: flex;
-  width: 100%;
-}
-.form_section{
-width: 50%;
-height: 100vh;
-padding: 35px 65px;
-overflow-y: auto;
-}
-.form_content{
-width: 100%;
-min-height: 90vh;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-border-radius: 4px;
-padding: 30px;
-}
-.form_container{
-width: 100%;
-box-shadow: rgba(0, 0, 0, 0.03) 0px 30px 60px;
-background: #fff;
-border-radius: 4px;
-padding: 30px 30px 15px;
-}
-.form_heading{
-font-size: 2rem;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-color: rgb(11, 30, 75);
-line-height: 30px;
-margin-bottom: 10px;
-margin-top: -10px;
-}
-.form_subheading{
-font-size: 1rem;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-color: rgb(123, 123, 123);
-line-height: 20px;
-margin-bottom: 25px;
-}
-input, label, select{
-margin-bottom: 10px;
-}
-
-h1{
-color: red;
-} 
-button{
-background-color:blue;
-border: 0;
-border-radius: 30px;
-height:25px;
-color: #fff;
-margin: 20px 0 20px 0;
-}
-button:hover{
-background: blueviolet;
-transition: 3s;
-}
-input, select{
-height: 40px;
-
-
-}
-input:hover, {
-border: 1.5px solid blue;
- 
-  border-radius: 2%;
- 
-}
-label{
-margin-bottom: 2px;
-}
-a svg path{
-color: black;
-}
-.logo2{
-display: none;
-}
-
-@media (max-width: 700px){
-.logo2{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-.section_1{
-display: none;
-}
-.form_section{
-  width: 100%;
-  height:100vh ;
- 
-} */
+      }
+      .side-1{
+        position:static;
+      }
+      .about_page{
+        position: static;
+        width: fit-content;
+      }
+      .animation{
+        animation: none;
+      }
+    }
